<resources>
    <string name="app_name">O Poderoso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="e_mail">E-Mail</string>
    <string name="nao_tem_conta">Não tem conta? Toque AQUI para criar uma.</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="criar_conta">Criar Conta</string>
</resources>