<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/Logo_View"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logo_poderoso_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/voltar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Nome_registro"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_custom"
            android:drawableEnd="@drawable/ic_account_box"
            android:drawablePadding="10dp"
            android:drawableTint="#8D9393"
            android:hint="@string/nome"
            android:inputType="text"
            android:paddingStart="26dp"
            android:paddingEnd="12dp"
            android:textColorHint="#8D9393"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Logo_View"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/email_Registro"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_custom"
            android:drawableEnd="@android:drawable/sym_action_email"
            android:drawablePadding="10dp"
            android:drawableTint="#8D9393"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingStart="26dp"
            android:paddingEnd="12dp"
            android:textColorHint="#8D9393"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Nome_registro"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/Senha_Registro"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_custom"
            android:drawableEnd="@android:drawable/ic_lock_lock"
            android:drawablePadding="10dp"
            android:drawableTint="#8D9393"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingStart="26dp"
            android:paddingEnd="12dp"
            android:textColorHint="#8D9393"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_Registro"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/RepetirSenha"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_custom"
            android:drawableEnd="@android:drawable/ic_lock_lock"
            android:drawablePadding="10dp"
            android:drawableTint="#8D9393"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:paddingStart="26dp"
            android:paddingEnd="12dp"
            android:textColorHint="#8D9393"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Senha_Registro"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/Criar_Conta"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/RepetirSenha"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button_login"
            android:fontFamily="@font/be_vietnam_thin_italic"
            android:text="@string/criar_conta"
            android:textColor="@color/background"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RepetirSenha" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>